# astral-uv-python-starter-template

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  local.yaml  pyproject.toml  ruff.toml  workspace.toml
.devcontainer/: .env.config  devcontainer.json
.github/workflows/: ci.yml  test.yml
components/observatory/common/: __init__.py  angle.py
scripts/: common.sh  entrypoint.sh  format.sh  lint.sh  test.sh  typecheck.sh
test/components/observatory/common/: test_angle.py
