[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astral-uv-python-starter"
version = "0.1.0"
description = "A hypermodern python monorepo starter template with astral uv ruff and polylith"
readme = "README.md"
requires-python = ">=3.13"

[dependency-groups]
dev = [
  "mypy>=1.13.0",
  "polylith-cli>=1.20.2",
  "pre-commit>=4.0.1",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "pytest>=8.3.3",
  "ruff>=0.7.3",
]


[tool.coverage.run]
concurrency = ["gevent", "thread"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]

# This configuration ensures the entire namespace of your brick is included when pytest 
# does it's test lookup. Without it, pytest will raise errors because of the default way
# it does module lookups. This occurs when using Polylith with the TDD theme.
[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
asyncio_default_fixture_loop_scope = ["session"]

# Add your polylith bricks here, e.g., "components/observatory/common" = "observatory/common"
[tool.polylith.bricks]
"components/observatory/common" = "observatory/common"

[tool.uv]
dev-dependencies = ["polylith-cli"]

# Workspace memebers for uv:
[tool.uv.workspace]
members = ["projects/*"]
